Fix restaurant card img unresponsiveness on mobile phones

--- a/src/style.css
+++ b/src/style.css
@@ -171,12 +171,12 @@ section.first p {
   background-repeat: no-repeat;
   background-position: center;
 }
-.third .card img,
-.third .embed {
-  display: block;
+.third .card-header img,
+.third .card-header .embed {
   width: 100%;
   height: 100%;
 }
+
 .third .card-body {
   padding: 20px 15px;
 }
@@ -360,7 +360,7 @@ footer a:hover {
 }
 
 @media (max-width: 476px) {
- a section {
+  a section {
     padding: 60px 20px;
   }
   section.fourth {
